# hallutination_detector

./: .gitattributes  README.md  pyproject.toml  requirments.txt
data/: train.csv
data/bench/: knowledge_bench_private_scores.csv  preds.csv
model/: classifier_gigachat.pkl
notebooks/: bisline_light_mod.ipynb  pipl_light_mod.ipynb  pipline.ipynb  prepare_data.ipynb
scripts/: donwload_model.sh  install.sh  prepare_data.sh  private_score.sh  train.sh
src/: predict.py  train.py
src/data/: _init_.py  dataset.py
src/features/: _init_.py  hidden_extractor.py
src/models/: _init_.py  classifier.py
